# minimal_ros_packages

./: LICENSE  README.md
action_minimal/: CMakeLists.txt  README.md  package.xml
action_minimal/action/: Minimal.action
action_minimal/launch/: action_test_server.launch
action_minimal/scripts/: action_test_python_client  action_test_python_server
boost_python_minimal/: CMakeLists.txt  README.md  package.xml  setup.py
boost_python_minimal/include/boost_python_minimal/: bytes_example.h
boost_python_minimal/scripts/: bytes_example_test.cpp  bytes_example_test.py  talker_node
boost_python_minimal/src/cpp/: boost_python_module.cpp  bytes_example.cpp
boost_python_minimal/src/python/boost_python_minimal/: bytes_example.py
minimal_ros_packages/: CMakeLists.txt  package.xml
msg_minimal/: CMakeLists.txt  README.md  package.xml
msg_minimal/launch/: msg_test_node.launch
msg_minimal/msg/: Minimal.msg
msg_minimal/scripts/: msg_test_node
rospy_minimal/: CMakeLists.txt  README.md  package.xml  setup.py
rospy_minimal/launch/: talker_node.launch
rospy_minimal/scripts/: talker_node
rospy_minimal/src/rospy_minimal/: talker.py
smach_minimal/: CMakeLists.txt  README.md  package.xml
smach_minimal/images/: traffic_light_sm.xml
smach_minimal/launch/: smach_minimal.launch  smach_minimal_launch.launch
smach_minimal/scripts/: traffic_lights  traffic_lights.py
srv_minimal/: CMakeLists.txt  README.md  package.xml
srv_minimal/scripts/: srv_test_python_client  srv_test_python_server
srv_minimal/srv/: MinimalService.srv
