<?xml version="1.0"?>
<package>
  <name>minimal_ros_packages</name>
  <version>0.0.1</version>
  <description>package containing minial examples of roscpp executable and ROS communication types</description>

  <maintainer email="robotics@mail.inf.h-brs.de">MAS Robotics</maintainer>

  <license>GPLv3</license>

  <author email="minhnh.91@gmail.com">Minh Nguyen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <metapackage/>
  </export>
</package>
