<?xml version="1.0"?>
<package format="2">
  <name>smach_minimal</name>
  <version>0.0.1</version>
  <description>minimal package with message generation for a service</description>

  <maintainer email="robotics@mail.inf.h-brs.de">MAS Robotics</maintainer>

  <license>GPLv3</license>

  <author email="minhnh.91@gmail.com">Swaroop Bhandary</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

</package>
